--- a/index.html
+++ b/index.html
@@ -29,11 +29,22 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
+            <h5 class="modal-title">Add Task</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p>Modal body text goes here.</p>
+            <div class="mb-3">
+              <label for="taskTitle" class="form-label">Task Title</label>
+              <input type="text" class="form-control" id="taskTitle" placeholder="To Do List">
+            </div>
+            <div class="mb-3">
+              <label for="taskDueDate" class="form-label">Task Due Date</label>
+              <input type="date" class="form-control" id="taskDueDate" placeholder="Task Due Date">
+            </div>
+            <div class="mb-3">
+              <label for="TaskDescription" class="form-label">Task Description</label>
+              <textarea class="form-control" id="TaskDescription" rows="3"></textarea>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
