--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             </div>
             <div class="mb-3">
               <label for="TaskDescription" class="form-label">Task Description</label>
-              <textarea class="form-control" id="TaskDescription" rows="3"></textarea>
+              <textarea class="form-control" id="taskDescription" rows="3"></textarea>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" id="cancel-add" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" id="save-task" class="btn btn-primary">Save Task</button>
           </div>
         </div>
       </div>
